Modernize the demo & CSS a bit.

--- a/demo.html
+++ b/demo.html
@@ -1,4 +1,4 @@
-<!doctype html public "-//W3C//DTD HTML 4.01 Transitional//EN" 
+<!doctype html public "-//W3C//DTD HTML 4.01 Transitional//EN"
 "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd">
 <html>
 <head>
@@ -13,16 +13,16 @@
 	<table id="thetable" cellspacing="0">
 	<thead>
 		<tr>
-		  <td>city</td>
-		  <td>state code</td>
-		  <td>zip</td>
-		  <td>latitude</td>
-		  <td>longitude</td>
-		  <td>county</td>
+		  <th>city</th>
+		  <th>state code</th>
+		  <th>zip</th>
+		  <th>latitude</th>
+		  <th>longitude</th>
+		  <th>county</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr class="first">
+		<tr>
 		  <td>Holtsville</td>
 		  <td>NY</td>
 		  <td>00501</td>
@@ -151,19 +151,19 @@
 	<table id="thetable2" cellspacing="0">
 	<thead>
 		<tr>
-			<td>State</td>
-			<td>Total Sales Tax</td>
-			<td>State Sales Tax</td>
-			<td>Local Sales Tax</td>
-			<td>Merch Sales Tax</td>
-			<td>Total Sales Tax</td>
-			<td>State Sales Tax</td>
-			<td>Local Sales Tax</td>
-			<td>Merch Sales Tax</td>
+			<th>State</th>
+			<th>Total Sales Tax</th>
+			<th>State Sales Tax</th>
+			<th>Local Sales Tax</th>
+			<th>Merch Sales Tax</th>
+			<th>Total Sales Tax</th>
+			<th>State Sales Tax</th>
+			<th>Local Sales Tax</th>
+			<th>Merch Sales Tax</th>
 		</tr>
 	</thead>
 	<tbody>
-		<tr class="first">
+		<tr>
 			<td>IL</td>
 			<td>$1,364.27</td>
 			<td>$712.05</td>
@@ -243,15 +243,15 @@
 	</tbody>
 	<tfoot>
 		<tr>
-			<td>&nbsp;</td>
-			<td>$1,364.27</td>
-			<td>$712.05</td>
-			<td>$211.11</td>
-			<td>$416.87</td>
-			<td>$1,364.27</td>
-			<td>$712.05</td>
-			<td>$211.11</td>
-			<td>$416.87</td>
+			<th>&nbsp;</th>
+			<th>$1,364.27</th>
+			<th>$712.05</th>
+			<th>$211.11</th>
+			<th>$416.87</th>
+			<th>$1,364.27</th>
+			<th>$712.05</th>
+			<th>$211.11</th>
+			<th>$416.87</th>
 		</tr>
 	</tfoot>
 	</table>
